[metadata]
name = data_utils
version = 0.0.1
description-file: README.md
keywords = file, storage, data, utilities
license = Apache 2.0 License
maintainer = Drew Pearce
maintainer_email = drew@caffdev.com
url = https://github.com/drewpearce/data_utils
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[bdist_wheel]
universal = 1

[options]
install_requires = 
    PyYAML==5.3.0
packages = find:
